# update-deps-action

./: .gitignore  README.md  action.yml  pyproject.toml
src/pdm_update_action/: __init__.py
